# ride-free-sim

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: bench_pypy.py  e12_verdict.py  e14_verdict.py  e16_h17_basic_p75_s01.json  e16_h17_basic_p75_s02.json  e16_h17_basic_p75_s03.json  e16_h17_basic_p75_s04.json  e16_h17_basic_p75_s05.json  e16_h17_basic_p75_s06.json  e16_h17_basic_p75_s07.json  e16_h17_basic_p75_s08.json  e16_h17_basic_p75_s09.json  e16_h17_basic_p75_s10.json  e16_h17_dev_p75_s01.json  e16_h17_dev_p75_s02.json  e16_h17_dev_p75_s03.json  e16_h17_dev_p75_s04.json  e16_h17_dev_p75_s05.json  e16_h17_dev_p75_s06.json  e16_h17_dev_p75_s07.json  e16_h17_dev_p75_s08.json  e16_h17_ins_p70_s01.json  e16_h17_ins_p70_s02.json  e16_h17_ins_p75_s01.json  e16_h17_ins_p75_s02.json  e16_h17_ins_p75_s03.json  e16_h17_ins_p75_s04.json  e16_h17_ins_p75_s05.json  e16_h17_ins_p75_s06.json  e16_h17_ins_p75_s07.json  e16_h17_ins_p75_s08.json  e16_h17_ins_p75_s09.json  e16_h17_ins_p75_s10.json  e16_h17_ins_p80_s01.json  e16_h17_ins_p80_s02.json  e16_ledger.py  e16_s17_basic_p75_s01.json  e16_s17_basic_p75_s02.json  e16_s17_basic_p75_s03.json  e16_s17_basic_p75_s04.json  (+220 more)
docs/: ARTICLE.md  ARTICLE_21P3.md  ARTICLE_BLACKJACK.md  ARTICLE_EZBAC.md  ARTICLE_HOBBY.md  ARTICLE_POG.md  DEEP_DIVE_AUDIT.md  DEEP_DIVE_STRATEGY.md  DESIGN.md  EXPERIMENTS.md  GUESSING_THEOREM.md  PARADIGM2.md  RESEARCH_IDEAS.md  ROADMAP.md  STATUS.md
tests/: conftest.py  test_21p3.py  test_baccarat.py  test_bj_order.py  test_counting.py  test_coup.py  test_dealer_odds.py  test_deviations.py  (+20 more)
(+36 files in other folders)
