[project]
name = "ridefree"
version = "0.1.0"
description = "Deterministic simulator for Ride Free (Free Bet) blackjack"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
