[project]
name = "ridefree"
version = "0.1.0"
description = "Deterministic simulator for Ride Free (Free Bet) blackjack"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Heavy statistical / Monte-Carlo gates are marked `slow` and SKIPPED by default,
# so routine `uv run pytest` stays fast (unit + exact tests). Run the full
# validation battery before any milestone gate:
#   uv run pytest -m slow              # just the heavy gates
#   uv run pytest -m "slow or not slow"  # everything
addopts = "-m 'not slow'"
markers = [
    "slow: heavy statistical/Monte-Carlo gate (millions of rounds); deselected by default",
]
